# ffcs-rust

./: .gitignore  Cargo.toml  README.md
src/: app_error.rs  main.rs
