[package]
name = "ffcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
lazy_static = "1.4.0"
notify = "5.1.0"
serde = { version = "1.0.155", features = ["derive"] }
tantivy = "0.19.2"
tokio = { version = "1.26.0" , features = ["full"] }
tokio-stream = "0.1.12"
notify-debouncer-mini = { version = "*", default-features = false }
futures = "0.3.27"
tower = { version = "0.4.13", features = ["timeout"] }
